--- a/css/slidestyles.css
+++ b/css/slidestyles.css
@@ -39,7 +39,7 @@ img { /* common CSS for fluid rescaling, but respecting the image's actual pixel
 .remark-slide-content img { /* special requirement for slides: upscale images smaller than the available space to 100%, but don't leak out over the bottom */
     margin: 0 auto !important;
     width: 100% !important;
-    height: 42vh !important;
+    /*height: 42vh !important;*/
     object-fit: contain !important;
 }
 
